--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.4",
+    "@react-navigation/native-stack": "^6.9.11",
+    "expo": "^48.0.4",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-native": "0.71.3",
+    "react-native-paper": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
