--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-navigation/native-stack": "^6.9.11",
+    "axios": "^1.3.4",
     "expo": "^48.0.4",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
