--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-navigation/native-stack": "^6.9.11",
     "axios": "^1.3.4",
     "expo": "^48.0.4",
