--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.3.4",
     "expo": "^48.0.4",
     "expo-splash-screen": "~0.18.1",
+    "expo-sqlite": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
